Sync GitLab state into GitHub: single snapshot of merged work

--- a/config/regressor_settings_range_default.yml
+++ b/config/regressor_settings_range_default.yml
@@ -10,7 +10,7 @@ RF:
         importance:
             method: importance
             min_importance: 0.005
-    feature_reduction_method: []
+    feature_reduction_method: [None]
     feature_reduction_parameters: { }
 
 GB:
@@ -25,7 +25,7 @@ GB:
         importance:
             method: importance
             min_importance: 0.005
-    feature_reduction_method: []
+    feature_reduction_method: [None]
     feature_reduction_parameters: { }
 
 MLP:
