--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,16 @@
-numpy~=1.26.0
-pandas~=2.1.1
-rdkit~=2024.3.5
-matplotlib~=3.8.0
-seaborn~=0.13.0
-pubchempy~=1.0.4
-requests~=2.32.3
-scikit-learn~=1.3.1
-emcee~=3.1.6 # # worked with 3.1.4 Used for bayesian inference
-scipy~=1.11.3
-padelpy~=0.1.14
-mordredcommunity~=2.0.4
-enviPath-python~=0.2.3
-tqdm~=4.66.1
-setuptools~=68.0.0
-sklearn-genetic~=0.6.0
-joblib~=1.4.2
-molfeat~=0.10.0
-mlxtend~=0.23.1
-tabulate~=0.9.0
-umap-learn~=0.5.6  # UMAP-learn installation is a bit tricky; I was succesful with conda
-scikit-posthocs~=0.9.1  # Installed with conda; seaborn updated to 0.13.2
-babel~=2.17.0
-
+numpy>=2.2.3,<3.0.0
+scikit-learn>=1.6.1,<2.0.0
+rdkit>=2024.9.5,<2025.0.0
+pandas>=2.2.3,<3.0.0
+padelpy>=0.1.16,<0.2.0
+mordredcommunity>=2.0.6,<3.0.0
+emcee>=3.1.6,<4.0.0
+pubchempy>=1.0.4,<2.0.0
+matplotlib>=3.10.1,<4.0.0
+seaborn>=0.13.2,<0.14.0
+envipath-python>=0.2.3,<0.3.0
+tqdm>=4.67.1,<5.0.0
+pyyaml>=6.0.2,<7.0.0
+sklearn-genetic>=0.6.0,<0.7.0
+mlxtend>=0.23.4,<0.24.0
+umap>=0.1.1,<0.2.0
