updated requirements and pyporject by adding tabulate 0.9 and limit scikilearn to less than 1.7 for the momment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy>=2.2.3,<3.0.0
-scikit-learn>=1.6.1,<2.0.0
+scikit-learn>=1.6.1,<1.7.0
 rdkit>=2024.9.5,<2025.0.0
 pandas>=2.2.0,<3.0.0
 padelpy>=0.1.14,<0.2.0
@@ -14,3 +14,4 @@ pyyaml>=6.0.2,<7.0.0
 sklearn-genetic>=0.6.0,<0.7.0
 mlxtend>=0.23.4,<0.24.0
 umap>=0.1.1,<0.2.0
+tabulate>=0.9.0,<1.0.0
