--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "numpy (>=2.2.3,<3.0.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)",
+    "scikit-learn (>=1.6.1,<1.7.0)",
     "rdkit (>=2024.9.5,<2025.0.0)",
     "pandas (>=2.2.0,<3.0.0)",
     "padelpy (>=0.1.14,<0.2.0)",
@@ -26,6 +26,7 @@ dependencies = [
     "sklearn-genetic (>=0.6.0,<0.7.0)",
     "mlxtend (>=0.23.4,<0.24.0)",
     "umap (>=0.1.1,<0.2.0)",
+    "tabulate (>=0.9.0,<1.0.0)"
 ]
 
 [build-system]
